--- a/GameIndustry/GameIndustry/Pages/Counter.razor
+++ b/GameIndustry/GameIndustry/Pages/Counter.razor
@@ -6,6 +6,9 @@
 
 <p role="status">Current count: @currentCount</p>
 
+<GameListTable></GameListTable>
+
+
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 
 @code {
