--- a/GameIndustry/GameIndustry/Shared/GameListTable.razor
+++ b/GameIndustry/GameIndustry/Shared/GameListTable.razor
@@ -8,17 +8,17 @@
             </tr>
         </thead>
         <tbody>
-            @if(games == null)
+            @if(Games == null)
             {
             <tr>LOADING...</tr>
             }
-            else if (games.Count == 0)
+            else if (Games.Count == 0)
             {
             <tr>NO Items in array</tr>
             }
             else
             {
-            @foreach (var item in games)
+            @foreach (var item in Games)
             {
                 <tr>
                     <td>@item.Name</td>
@@ -32,20 +32,5 @@
 </div>
 
 @code {
-    private List<Game> games { get; set; }
-
-    /// <summary>
-    /// Метод отвечает за данные до отрисовки
-    /// </summary>
-    /// <returns></returns>
-    protected async override Task OnInitializedAsync()
-    {
-        await Task.Delay(3000);
-        games = new List<Game>()
-        {
-        new Game(){ Name = "Farming Simulator 2019", Genre = "Simulator", ReleaseDate = new DateTime(2018,11,19)},
-        new Game(){ Name = "Witcher", Genre = "Action/RPG", ReleaseDate = new DateTime(2015,5,18)},
-        new Game(){ Name = "Destroy All Humans", Genre = "Action-Adventure", ReleaseDate = new DateTime(2007,11,19)},
-        };
-    }
+    [Parameter]  public List<Game> Games { get; set; }
 }
