--- a/GameIndustry/GameIndustry/Pages/Counter.razor
+++ b/GameIndustry/GameIndustry/Pages/Counter.razor
@@ -6,7 +6,7 @@
 
 <p role="status">Current count: @currentCount</p>
 
-<GameListTable></GameListTable>
+<GameListTable Games="otherGames"></GameListTable>
 
 
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
@@ -18,4 +18,21 @@
     {
         currentCount++;
     }
+
+
+    private List<Game> otherGames;
+    /// <summary>
+    /// Метод отвечает за данные до отрисовки
+    /// </summary>
+    /// <returns></returns>
+    protected override void OnInitialized()
+    {
+        otherGames = new List<Game>()
+        {
+        new Game(){ Name = "Game 1", Genre = "Simulator", ReleaseDate = new DateTime(2018,11,19)},
+        new Game(){ Name = "Game 2", Genre = "Action/RPG", ReleaseDate = new DateTime(2015,5,18)},
+        new Game(){ Name = "Game 3", Genre = "Action-Adventure", ReleaseDate = new DateTime(2007,11,19)},
+        };
+    }
+
 }
