Добавление индивидуальной игрі на страницу

--- a/GameIndustry/GameIndustry/Shared/IndividualGame.razor
+++ b/GameIndustry/GameIndustry/Shared/IndividualGame.razor
@@ -2,7 +2,7 @@
     <div class="col">
         <p>@Game.Name</p>
         <p>@Game.Genre</p>
-        <p>@Game.ReleaseDate</p>
+        <p>@Game.ReleaseDate.ToString("dd.MM.yyyy")</p>
     </div>
 </div>
 
