Добавление чекбокса вывода кнопок удаления. Анонимный метод

--- a/GameIndustry/GameIndustry/Pages/Index.razor
+++ b/GameIndustry/GameIndustry/Pages/Index.razor
@@ -12,7 +12,7 @@
     </div>
 </div>
 <GameListTable Games="games"></GameListTable>
-<IndividualGame Game="games[0]" />
+<IndividualGame Game="games[0]" DisplayButtons ="true" />
 
 @code
 {
