--- a/GameIndustry/GameIndustry/Shared/IndividualGame.razor
+++ b/GameIndustry/GameIndustry/Shared/IndividualGame.razor
@@ -7,21 +7,22 @@
             <p>@Game.ReleaseDate.ToString("dd.MM.yyyy")</p>
         </div>
     </div>
+    if (DisplayButtons)
+    {
+        <div class="row">
+            <div class="col offset-3">
+                <button class="btn-danger" @onclick="Delete">Delete</button>
+            </div>
 
-    <div class="row">
-        <div class="col offset-3">
-            <button class="btn-danger" @onclick="Delete">Delete</button>
+            <div class="col">
+                @if (message != null)
+                {
+                    <span class="text-danger">@message</span>
+                    message = null;
+                }
+            </div>
         </div>
-
-        <div class="col">
-            @if (message != null)
-            {
-                <span class="text-danger">@message</span>
-                message = null;
-            }
-        </div>
-
-    </div>
+    }
 }
 else
 {
@@ -30,11 +31,14 @@ else
         <td>@Game.Genre</td>
         <td>@Game.ReleaseDate.ToString("dd.MM.yyyy")</td>
         <td>
-            <button class="btn-danger" @onclick="Delete">Delete</button>
-            @if (message != null)
+            @if (DisplayButtons)
             {
-                <span class="text-danger" pl-3>@message</span>
-                message = null;
+                <button class="btn-danger" @onclick="Delete">Delete</button>
+                @if (message != null)
+                {
+                    <span class="text-danger" pl-3>@message</span>
+                    message = null;
+                }
             }
         </td>
     </tr>
@@ -45,7 +49,9 @@ else
     [Parameter] public Game Game { get; set; }
     [Parameter] public bool IsTable { get; set; }
 
-    private string message; 
+    [Parameter] public bool DisplayButtons { get; set; } = false;
+
+    private string message;
 
     void Delete()
     {
