--- a/GameIndustry/GameIndustry/Pages/Counter.razor
+++ b/GameIndustry/GameIndustry/Pages/Counter.razor
@@ -2,11 +2,31 @@
 
 <PageTitle>Counter</PageTitle>
 
-<h1>Counter</h1>
+<div class="row">
+    <div class="col alert alert-secondary text-center">
+        <h1>Counter</h1>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-6 text-left">
+        <button class="btn btn-primary p-3" @onclick="IncrementCount">Click me</button>
+    </div>
+    <div class="col-6 text-right">
+        <div style="font-size: 50px">@currentCount</div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col text-center">
+        <input type="number" class="form-control-lg" />
+    </div>
+</div>
+
+
 
 <p role="status">Current count: @currentCount</p>
 
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 
 @code {
     private int currentCount = 0;
