--- a/GameIndustry/GameIndustry/Pages/Counter.razor
+++ b/GameIndustry/GameIndustry/Pages/Counter.razor
@@ -19,7 +19,7 @@
 
 <div class="row">
     <div class="col text-center">
-        <input type="number" class="form-control-lg" />
+        <input type="number" class="form-control-lg" @bind="currentCount" />
     </div>
 </div>
 
