Вторая интерпритация работы с checkbox

--- a/GameIndustry/GameIndustry/Shared/GameListTable.razor
+++ b/GameIndustry/GameIndustry/Shared/GameListTable.razor
@@ -5,7 +5,9 @@
                 <th>Name</th>
                 <th>Genre</th>
                 <th>Release</th>
-                <th><input type="checkbox" @onchange="(() => displayButtons = !displayButtons)" /></th>
+                @*<th><input type="checkbox" @onchange="(() => displayButtons = !displayButtons)" /></th>*@
+                <th><input type="checkbox" @bind="displayButtons" /></th>
+
             </tr>
         </thead>
         <tbody>
