--- a/GameIndustry/GameIndustry/Shared/IndividualGame.razor
+++ b/GameIndustry/GameIndustry/Shared/IndividualGame.razor
@@ -12,7 +12,7 @@
         <div class="row">
             <div class="col offset-3">
                 @*<button class="btn-danger" @onclick="Delete">Delete</button>*@
-                @*<button class="btn-danger" @onclick="Delete">Delete</button>*@
+                <button class="btn-danger" @onclick="SwitchGame">Delete</button>
 
             </div>
 
@@ -63,4 +63,5 @@ else
     //}
 
     [Parameter] public EventCallback<Game> DeleteGame { get; set; }
+    [Parameter] public EventCallback SwitchGame { get; set; }
 }
