--- a/GameIndustry/GameIndustry/Pages/Index.razor
+++ b/GameIndustry/GameIndustry/Pages/Index.razor
@@ -12,9 +12,9 @@
     </div>
 </div>
 <GameListTable Games="games">
-    <ChildContent>
+    <NullList>
         <tr><span style="text-align:center; color:red; font-weight:bolder">Element loading...</span></tr>
-    </ChildContent>
+    </NullList>
 </GameListTable>
 @*<IndividualGame Game="oneGameToShow" DisplayButtons="true" IsTable="false" SwitchGame="ShowNewGame" />*@
 
