--- a/GameIndustry/GameIndustry/Shared/GameListTable.razor
+++ b/GameIndustry/GameIndustry/Shared/GameListTable.razor
@@ -14,7 +14,7 @@
             @if (Games == null)
             {
                @* <tr>LOADING...</tr>*@
-               <tr>@ChildContent</tr>
+               <tr>@NullList</tr>
             }
             else if (Games.Count == 0)
             {
@@ -38,7 +38,7 @@
 
 @code {
     [Parameter] public List<Game> Games { get; set; }
-    [Parameter] public RenderFragment ChildContent { get; set; }
+    [Parameter] public RenderFragment NullList { get; set; }
 
     private bool displayButtons = false;
 
