Добавлена проверка на Null RenderFragment

--- a/GameIndustry/GameIndustry/Pages/Index.razor
+++ b/GameIndustry/GameIndustry/Pages/Index.razor
@@ -12,12 +12,12 @@
     </div>
 </div>
 <GameListTable Games="games">
-    <NullList>
+    @*<NullList>
         <tr><span style="text-align:center; color:red; font-weight:bolder">Element loading...</span></tr>
     </NullList>
     <EmptyList>
         <tr><span style="text-align:center; color:blue">No elements in array</span></tr>
-    </EmptyList>
+    </EmptyList>*@
 </GameListTable>
 @*<IndividualGame Game="oneGameToShow" DisplayButtons="true" IsTable="false" SwitchGame="ShowNewGame" />*@
 
