--- a/GameIndustry/GameIndustry/Pages/Index.razor
+++ b/GameIndustry/GameIndustry/Pages/Index.razor
@@ -28,18 +28,19 @@
     /// Метод отвечает за данные до отрисовки
     /// </summary>
     /// <returns></returns>
-    //protected override void OnInitialized()
-    //{
-    //    games = new List<Game>()
-    //    {
-    //    new Game(){ Name = "Farming Simulator 2019", Genre = "Simulator", ReleaseDate = new DateTime(2018,11,19)},
-    //    new Game(){ Name = "Witcher", Genre = "Action/RPG", ReleaseDate = new DateTime(2015,5,18)},
-    //    new Game(){ Name = "Destroy All Humans", Genre = "Action-Adventure", ReleaseDate = new DateTime(2007,11,19)},
-    //    };
+    protected async override Task OnInitializedAsync()
+    {
+        await Task.Delay(2000);
+        games = new List<Game>()
+        {
+        new Game(){ Name = "Farming Simulator 2019", Genre = "Simulator", ReleaseDate = new DateTime(2018,11,19)},
+        new Game(){ Name = "Witcher", Genre = "Action/RPG", ReleaseDate = new DateTime(2015,5,18)},
+        new Game(){ Name = "Destroy All Humans", Genre = "Action-Adventure", ReleaseDate = new DateTime(2007,11,19)},
+        };
 
-    //    rnd = new Random(DateTime.Now.Millisecond);
-    //    oneGameToShow = games[rnd.Next(0, games.Count)];
-    //}
+        rnd = new Random(DateTime.Now.Millisecond);
+        oneGameToShow = games[rnd.Next(0, games.Count)];
+    }
 
     private Random rnd;
     private Game oneGameToShow;
