--- a/GameIndustry/GameIndustry/Shared/GameListTable.razor
+++ b/GameIndustry/GameIndustry/Shared/GameListTable.razor
@@ -1,4 +1,5 @@
-﻿<div class="table-responsive">
+﻿@using System.Diagnostics;
+<div class="table-responsive">
     <table class="table table-striped">
         <thead class="thead-light">
             <tr>
@@ -66,5 +67,43 @@
     private void DeleteTheGame(Game game)
     {
         Games.Remove(game);
+    }
+
+    /// <summary>
+    /// При инициализации компонента
+    /// </summary>
+    protected override void OnInitialized()
+    {
+        //base.OnInitialized();
+        Console.WriteLine($"1. OnInitialized(). Game count: {Games? .Count}");
+    }
+
+    /// <summary>
+    /// При установке параметров
+    /// </summary>
+    protected override void OnParametersSet()
+    {
+        base.OnParametersSet();
+        Console.WriteLine($"2. OnParametersSet()");
+    }
+
+    /// <summary>
+    /// 
+    /// </summary>
+    /// <param name="firstRender"></param>
+    protected override void OnAfterRender(bool firstRender)
+    {
+        base.OnAfterRender(firstRender);
+        Console.WriteLine($"3. OnAfterRender(bool firstRender). FirstRender? : {firstRender}");
+    }
+
+    /// <summary>
+    ///  Дает или отключает возможность перерисовывать наши компоненты
+    /// </summary>
+    /// <returns></returns>
+    protected override bool ShouldRender()
+    {
+       // return base.ShouldRender();
+        return true;
     }
 }
