--- a/GameIndustry/GameIndustry/Pages/Index.razor
+++ b/GameIndustry/GameIndustry/Pages/Index.razor
@@ -1,4 +1,5 @@
 ﻿@page "/"
+@inject GameIndustry.Repository.IRepository repository
 
 <div class="row">
     <div class="col text-center">
@@ -31,12 +32,7 @@
     protected async override Task OnInitializedAsync()
     {
         await Task.Delay(2000);
-        games = new List<Game>()
-        {
-        new Game(){ Name = "Farming Simulator 2019", Genre = "Simulator", ReleaseDate = new DateTime(2018,11,19)},
-        new Game(){ Name = "Witcher", Genre = "Action/RPG", ReleaseDate = new DateTime(2015,5,18)},
-        new Game(){ Name = "Destroy All Humans", Genre = "Action-Adventure", ReleaseDate = new DateTime(2007,11,19)},
-        };
+        games = repository.GetAllGames();
 
         rnd = new Random(DateTime.Now.Millisecond);
         oneGameToShow = games[rnd.Next(0, games.Count)];
