Использование partial классов

--- a/GameIndustry/GameIndustry/Pages/Index.razor
+++ b/GameIndustry/GameIndustry/Pages/Index.razor
@@ -1,5 +1,5 @@
 ﻿@page "/"
-@inject GameIndustry.Repository.IRepository repository
+@*@inject GameIndustry.Repository.IRepository repository*@
 
 <div class="row">
     <div class="col text-center">
@@ -22,47 +22,4 @@
 </GameListTable>
 <IndividualGame Game="oneGameToShow" DisplayButtons="true" IsTable="false" SwitchGame="ShowNewGame" />
 
-@code
-{
-    private List<Game> games = new List<Game>();
-    /// <summary>
-    /// Метод отвечает за данные до отрисовки
-    /// </summary>
-    /// <returns></returns>
-    protected async override Task OnInitializedAsync()
-    {
-        await Task.Delay(2000);
-        games = repository.GetAllGames();
-
-        rnd = new Random(DateTime.Now.Millisecond);
-        oneGameToShow = games[rnd.Next(0, games.Count)];
-    }
-
-    private Random rnd;
-    private Game oneGameToShow;
-
-    private void ShowNewGame()
-    {
-        oneGameToShow = SwitchGame();
-    }
-
-    private Game SwitchGame()
-    {
-        Game tempGame;
-        if (games.Count >= 2)
-        {
-            int iterator = rnd.Next(0, games.Count);
-            tempGame = games[iterator];
-        }
-        else if (games.Count == 1)
-        {
-            tempGame = games[0];
-        }
-        else
-        {
-            return new Game() { Name = "No items in array!", ReleaseDate = DateTime.Now };
-        }
-        return tempGame;
-    }
-}
 
